# agent-systems-demo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
agent_systems_proof/: __init__.py  agent.py  cli.py  evaluator.py  judge.py  paths.py  safety.py  storage.py  tools.py  tracing.py
docs/: postmortem.md  public-release-spec.md  spec.md
docs/sources/: context_engineering.md  cost_latency_observability.md  durability_sandboxing.md  effective_agents.md  evaluation_regression.md
evals/: questions.jsonl
tests/: test_agent.py
