[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-systems-proof"
version = "0.1.0"
description = "Offline proof repo for durable agent loops, tool traces, evals, and resume-after-kill behavior."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agent-proof = "agent_systems_proof.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_systems_proof*"]

