[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-systems-proof"
version = "0.1.0"
description = "Offline harness for checkpointed agent runs, local tools, traces, and eval gates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agent-proof = "agent_systems_proof.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_systems_proof*"]
